--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
             <div class="intro">
                 <ul>
                     <li>姓名 | 袁珂</li>
+                    <li>学历 | 本科</li>
                     <li>手机 | 15911668172</li>
                     <li>邮箱 | <a href="mailto:542154855@qq.com" hidefocus="true">542154855@qq.com</a> </li>
                     <li>Github | <a href="https://github.com/F97xmx01">(〒＿〒）点我</a></li>
                 </ul>
             </div>
             <div class="introduce">
-                <p>能根据PSD设计稿，利用HTML+CSS完成页面布局，Css及JS实现页面效果。
+                <p>能根据PSD设计稿，利用HTML+CSS完成页面布局，Css及JS实现页面效果，熟悉PHP+MySQL。能使用ajax与后台进行数据沟通。
                     <br>我喜欢研究新技术，是一个具备死磕精神并有时间观念的人，能够按时完成任务。
                     <br>
                 </p>
@@ -113,6 +114,23 @@
         </ul>
         </div>
         </div>
-<!-- 底部 -->
-<div class="tips"></div>
+        <!-- 底部 -->
+        <div class="tips">
+            <h1 class="tip">项目经验</h1>
+            <div class="time">
+                <div class="tBox">
+                    <div class="timeBox fl">
+                        <h1>使用PHP开发手机版本的百度新闻</h1>
+                        <p>利用HTML+CSS完成页面布局，Css及JS实现页面及新闻的后台管理页面效果。通过MAMP搭建mysql+php开发环境，用ajax与后台进行数据沟通。</p>
+                    </div>
+                </div>
+                <div class="tBox">
+                    <div class="timeBox fr">
+                        <h1>开发Nodejs版本的百度新闻</h1>
+                        <p>利用HTML+CSS完成页面布局，Css及JS实现页面及新闻的后台管理页面效果。使用Node.js替代PHP。</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 </html>
